[tool.poetry]
name = "rag-introduction"
version = "0.1.0"
description = "Introduction to RAG"
authors = ["Andre Caraiba <drecaraiba@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
pypdf = "^5.1.0"
faiss-gpu = "^1.7.2"
langchain-ollama = "^0.2.0"
docling = "^2.4.1"
# docling = "1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"